[gd_scene load_steps=14 format=2]

[ext_resource path="res://characters/Charlie/Charlie.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/graphics/Dungeon Tile Set.tres" type="TileSet" id=2]
[ext_resource path="res://assets/platformer_metroidvania asset pack v1.01/miscellaneous sprites/coin_anim_strip_6.png" type="Texture" id=3]
[ext_resource path="res://assets/platformer_metroidvania asset pack v1.01/miscellaneous sprites/orb.png" type="Texture" id=4]
[ext_resource path="res://levels/TestLevel2/Level.gd" type="Script" id=5]
[ext_resource path="res://assets/platformer_metroidvania asset pack v1.01/hud elements/orbs_hud.png" type="Texture" id=6]
[ext_resource path="res://assets/platformer_metroidvania asset pack v1.01/hud elements/coins_hud.png" type="Texture" id=7]
[ext_resource path="res://levels/TestLevel2/BrickPlatform.tscn" type="PackedScene" id=8]

[sub_resource type="TileSet" id=1]
0/name = "coin"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 24, 0, 8, 8 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "orb"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 8, 8 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 440, 248 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "move"
length = 18.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 9, 11 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 440, 248 ), Vector2( 440, 248 ), Vector2( 440, 8 ), Vector2( 440, 8 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 104, 184 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "move"
length = 14.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 7, 8, 14 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 104, 184 ), Vector2( 104, 184 ), Vector2( 280, 184 ), Vector2( 280, 184 ), Vector2( 104, 184 ) ]
}

[node name="Level" type="Node2D"]
script = ExtResource( 5 )

[node name="Background" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
centered_textures = true
collision_layer = 4
collision_mask = 0
format = 1
tile_data = PoolIntArray( -2621428, 1, 65537, -2621427, 1, 65537, -2621426, 1, 65537, -2621425, 1, 65537, -2621424, 1, 65537, -2621423, 1, 65537, -2621422, 1, 65537, -2621421, 1, 65537, -2621420, 1, 65537, -2621419, 1, 65537, -2621418, 1, 65537, -2621417, 1, 65537, -2621416, 1, 65537, -2621415, 1, 65537, -2621414, 1, 65537, -2621413, 1, 65537, -2621412, 1, 65537, -2621411, 1, 65537, -2621410, 1, 65537, -2621409, 1, 65537, -2621408, 1, 65537, -2621407, 1, 65537, -2621406, 1, 65537, -2621405, 1, 65537, -2621404, 1, 65537, -2621403, 1, 65537, -2621402, 1, 65537, -2621401, 1, 65537, -2621400, 1, 65537, -2621399, 1, 65537, -2621398, 1, 65537, -2621397, 1, 65537, -2621396, 1, 65537, -2621395, 1, 65537, -2621394, 1, 65537, -2621393, 1, 65537, -2621392, 1, 65537, -2621391, 1, 65537, -2621390, 1, 65537, -2555829, 1, 65537, -2555828, 1, 65537, -2555827, 1, 65537, -2555826, 1, 65537, -2555825, 1, 65537, -2555824, 1, 65537, -2555823, 1, 65537, -2555822, 1, 65537, -2555821, 1, 65537, -2555820, 1, 65537, -2555819, 1, 65537, -2555818, 1, 65537, -2555817, 1, 65537, -2555816, 1, 65537, -2555815, 1, 65537, -2555814, 1, 65537, -2555813, 1, 65537, -2359284, 1, 65537, -2359283, 1, 65537, -2359282, 1, 65537, -2359281, 1, 65537, -2359280, 1, 65537, -2359279, 1, 65537, -2359278, 1, 65537, -2359277, 1, 65537, -2359276, 1, 65537, -2359275, 1, 65537, -2359274, 1, 65537, -2359273, 1, 65537, -2359272, 1, 65537, -2359271, 1, 65537, -2359270, 1, 65537, -2359269, 1, 65537, -2359268, 1, 65537, -2359267, 1, 65537, -2359266, 1, 65537, -2359265, 1, 65537, -2359264, 1, 65537, -2359263, 1, 65537, -2359262, 1, 65537, -2359261, 1, 65537, -2359260, 1, 65537, -2359259, 1, 65537, -2359258, 1, 65537, -2359257, 1, 65537, -2359256, 1, 65537, -2359255, 1, 65537, -2359254, 1, 65537, -2359253, 1, 65537, -2359252, 1, 65537, -2359251, 1, 65537, -2359250, 1, 65537, -2359249, 1, 65537, -2359248, 1, 65537, -2359247, 1, 65537, -2359246, 1, 65537, -2359245, 1, 65537, -2359244, 1, 65537, -2359243, 1, 65537, -2359242, 1, 65537, -2359241, 1, 65537, -2359240, 1, 65537, -2359239, 1, 65537, -2359238, 1, 65537, -2359237, 1, 65537, -2359236, 1, 65537, -2359235, 1, 65537, -2359234, 1, 65537, -2359233, 1, 65537, -2359232, 1, 65537, -2359231, 1, 65537, -2359230, 1, 65537, -2359229, 1, 65537, -2359228, 1, 65537, -2359227, 1, 65537, -2359226, 1, 65537, -2359225, 1, 65537, -2359224, 1, 65537, -2359223, 1, 65537, -2359222, 1, 65537, -2031616, 1, 65537, -2031615, 1, 65537, -2031614, 1, 65537, -2031613, 1, 65537, -2031612, 1, 65537, -2031611, 1, 65537, -2031610, 1, 65537, -2031609, 1, 65537, -2031608, 1, 65537, -2031607, 1, 65537, -2031606, 1, 65537, -2031605, 1, 65537, -2031604, 1, 65537, -2031603, 1, 65537, -2031602, 1, 65537, -2031601, 1, 65537, -2031600, 1, 65537, -2031599, 1, 65537, -2031598, 1, 65537, -2031597, 1, 65537, -2031596, 1, 65537, -2031595, 1, 65537, -2031594, 1, 65537, -2031593, 1, 65537, -2031592, 1, 65537, -2031591, 1, 65537, -2031590, 1, 65537, -2031589, 1, 65537, -2031588, 1, 65537, -2031587, 1, 65537, -2031586, 1, 65537, -2031585, 1, 65537, -2031584, 1, 65537, -2031583, 1, 65537, -2031582, 1, 65537, -2031581, 1, 65537, -2031580, 1, 65537, -2031579, 1, 65537, -2031578, 1, 65537, -2031577, 1, 65537, -2031576, 1, 65537, -2031575, 1, 65537, -2031574, 1, 65537, -2031573, 1, 65537, -2031572, 1, 65537, -2031571, 1, 65537, -2031570, 1, 65537, -2031569, 1, 65537, -2031568, 1, 65537, -2031567, 1, 65537, -2031566, 1, 65537, -2031565, 1, 65537, -2031564, 1, 65537, -2031563, 1, 65537, -2031562, 1, 65537, -2031561, 1, 65537, -2031560, 1, 65537, -2031559, 1, 65537, -2031558, 1, 65537, -2031557, 1, 65537, -2031556, 1, 65537, -2031555, 1, 65537, -2031554, 1, 65537, -2031553, 1, 65537, -2031552, 1, 65537, -2031551, 1, 65537, -2031550, 1, 65537, -2031549, 1, 65537, -2031548, 1, 65537, -2031547, 1, 65537, -2031546, 1, 65537, -2031545, 1, 65537, -2031544, 1, 65537, -2031543, 1, 65537, -2031542, 1, 65537, -1769472, 1, 65537, -1769471, 1, 65537, -1769470, 1, 65537, -1769469, 1, 65537, -1769468, 1, 65537, -1769467, 1, 65537, -1769466, 1, 65537, -1769465, 1, 65537, -1769464, 1, 65537, -1769463, 1, 65537, -1769462, 1, 65537, -1769461, 1, 65537, -1769397, 1, 65537, -1769396, 1, 65537, -1769395, 1, 65537, -1769394, 1, 65537, -1769393, 1, 65537, -1769392, 1, 65537, -1769391, 1, 65537, -1769390, 1, 65537, -1769389, 1, 65537, -1769388, 1, 65537, -1769387, 1, 65537, -1769386, 1, 65537, -1769385, 1, 65537, -1769384, 1, 65537, -1769383, 1, 65537, -1769382, 1, 65537, -1769381, 1, 65537, -1441755, 1, 65537, -1441754, 1, 65537, -1441753, 1, 65537, -1441752, 1, 65537, -1441751, 1, 65537, -1441750, 1, 65537, -1441749, 1, 65537, -1441748, 1, 65537, -1441747, 1, 65537, -1441746, 1, 65537, -1441745, 1, 65537, -1441744, 1, 65537, -1441743, 1, 65537, -1441742, 1, 65537, -1441741, 1, 65537, -1441740, 1, 65537, -1441739, 1, 65537, -1441738, 1, 65537, -1441737, 1, 65537, -1441736, 1, 65537, -1441735, 1, 65537, -1441734, 1, 65537, -1441733, 1, 65537, -1441732, 1, 65537, -1441731, 1, 65537, -1441730, 1, 65537, -1441729, 1, 65537, -1441728, 1, 65537, -1441727, 1, 65537, -1441726, 1, 65537, -1441725, 1, 65537, -1441724, 1, 65537, -1441723, 1, 65537, -1441722, 1, 65537, -1441704, 1, 65537, -1441703, 1, 65537, -1441702, 1, 65537, -1441701, 1, 65537, -1245140, 1, 65537, -1245139, 1, 65537, -1245138, 1, 65537, -1245137, 1, 65537, -1245136, 1, 65537, -1245135, 1, 65537, -1245134, 1, 65537, -1245133, 1, 65537, -1245132, 1, 65537, -1245131, 1, 65537, -1245130, 1, 65537, -1245129, 1, 65537, -1245128, 1, 65537, -1245127, 1, 65537, -1245126, 1, 65537, -1245125, 1, 65537, -1245124, 1, 65537, -1245123, 1, 65537, -983020, 1, 65537, -983019, 1, 65537, -983018, 1, 65537, -983017, 1, 65537, -983016, 1, 65537, -982996, 1, 65537, -982995, 1, 65537, -982994, 1, 65537, -982993, 1, 65537, -982992, 1, 65537, -982991, 1, 65537, -982990, 1, 65537, -982989, 1, 65537, -982988, 1, 65537, -982987, 1, 65537, -982986, 1, 65537, -982985, 1, 65537, -982984, 1, 65537, -982983, 1, 65537, -982982, 1, 65537, -982981, 1, 65537, -982980, 1, 65537, -982979, 1, 65537, -655359, 1, 65537, -655358, 1, 65537, -655357, 1, 65537, -655356, 1, 65537, -655355, 1, 65537, -655354, 1, 65537, -655353, 1, 65537, -655352, 1, 65537, -655351, 1, 65537, -655350, 1, 65537, -655349, 1, 65537, -655348, 1, 65537, -655347, 1, 65537, -655346, 1, 65537, -655345, 1, 65537, -655344, 1, 65537, -655343, 1, 65537, -655342, 1, 65537, -655341, 1, 65537, -655316, 1, 65537, -655315, 1, 65537, -655314, 1, 65537, -655313, 1, 65537, -655312, 1, 65537, -655311, 1, 65537, -655310, 1, 65537, -655309, 1, 65537, -655308, 1, 65537, -655307, 1, 65537, -655306, 1, 65537, -655305, 1, 65537, -655304, 1, 65537, -655303, 1, 65537, -655302, 1, 65537, -655301, 1, 65537, -655300, 1, 65537, -655299, 1, 65537, -655298, 1, 65537, -655297, 1, 65537, -655296, 1, 65537, -655295, 1, 65537, -655294, 1, 65537, -655293, 1, 65537, -655292, 1, 65537, -655291, 1, 65537, -655290, 1, 65537, -327679, 1, 65537, -327678, 1, 65537, -327677, 1, 65537, -327676, 1, 65537, -327675, 1, 65537, -327674, 1, 65537, -327673, 1, 65537, -327672, 1, 65537, -327671, 1, 65537, -327670, 1, 65537, -327669, 1, 65537, -327668, 1, 65537, -327667, 1, 65537, -327666, 1, 65537, -327665, 1, 65537, -327664, 1, 65537, -327663, 1, 65537, -327662, 1, 65537, -327661, 1, 65537, -327647, 1, 65537, -327646, 1, 65537, -327645, 1, 65537, -327644, 1, 65537, -327643, 1, 65537, -327642, 1, 65537, -327641, 1, 65537, -327640, 1, 65537, -327639, 1, 65537, -327638, 1, 65537, -327637, 1, 65537, -327609, 1, 65537, -327608, 1, 65537, -327607, 1, 65537, -327606, 1, 65537, -327605, 1, 65537, -327604, 1, 65537, -327603, 1, 65537, -327602, 1, 65537, -327601, 1, 65537, -327600, 1, 65537, -327599, 1, 65537, -327598, 1, 65537, -327597, 1, 65537, -327596, 1, 65537, -327595, 1, 65537, -327594, 1, 65537, -327593, 1, 65537, -327592, 1, 65537, -327591, 1, 65537, -327590, 1, 65537, -327589, 1, 65537, -327588, 1, 65537, -327587, 1, 65537, -327586, 1, 65537, -327585, 1, 65537, -327584, 1, 65537, -327583, 1, 65537, -327582, 1, 65537, -327581, 1, 65537, 20, 1, 65537, 21, 1, 65537, 22, 1, 65537, 23, 1, 65537, 31, 1, 65537, 32, 1, 65537, 33, 1, 65537, 34, 1, 65537, 62, 1, 65537, 63, 1, 65537, 64, 1, 65537, 65, 1, 65537, 66, 1, 65537, 67, 1, 65537, 68, 1, 65537, 69, 1, 65537, 70, 1, 65537, 71, 1, 65537, 72, 1, 65537, 73, 1, 65537, 74, 1, 65537, 75, 1, 65537, 76, 1, 65537, 77, 1, 65537, 78, 1, 65537, 79, 1, 65537, 327681, 1, 1, 327682, 1, 1, 327683, 1, 1, 327684, 1, 1, 327742, 1, 65537, 327743, 1, 65537, 327744, 1, 65537, 327745, 1, 65537, 327746, 1, 65537, 327747, 1, 65537, 327748, 1, 65537, 327749, 1, 65537, 327750, 1, 65537, 327751, 1, 65537, 327752, 1, 65537, 327753, 1, 65537, 327754, 1, 65537, 327755, 1, 65537, 327756, 1, 65537, 327757, 1, 65537, 327758, 1, 65537, 327759, 1, 65537, 458772, 1, 65537, 458773, 1, 65537, 458774, 1, 65537, 458775, 1, 65537, 458783, 1, 65537, 458784, 1, 65537, 458785, 1, 65537, 458786, 1, 65537, 524289, 1, 1, 524290, 1, 1, 524291, 1, 1, 524292, 1, 1, 655380, 1, 65537, 655381, 1, 65537, 655382, 1, 65537, 655383, 1, 65537, 655391, 1, 65537, 655392, 1, 65537, 655393, 1, 65537, 655394, 1, 65537, 655408, 1, 65537, 655409, 1, 65537, 655410, 1, 65537, 655411, 1, 65537, 655412, 1, 65537, 655413, 1, 65537, 655414, 1, 65537, 655415, 1, 65537, 655416, 1, 65537, 655417, 1, 65537, 655418, 1, 65537, 655419, 1, 65537, 655420, 1, 65537, 655421, 1, 65537, 655422, 1, 65537, 655423, 1, 65537, 655424, 1, 65537, 655425, 1, 65537, 655426, 1, 65537, 655434, 1, 65537, 655435, 1, 65537, 655436, 1, 65537, 655437, 1, 65537, 655438, 1, 65537, 655439, 1, 65537, 655440, 1, 65537, 655441, 1, 65537, 655442, 1, 65537, 655443, 1, 65537, 655444, 1, 65537, 655445, 1, 65537, 655446, 1, 65537, 655447, 1, 65537, 655448, 1, 65537, 655449, 1, 65537, 655450, 1, 65537, 655451, 1, 65537, 655452, 1, 65537, 655453, 1, 65537, 720897, 1, 1, 720898, 1, 1, 720899, 1, 1, 720900, 1, 1, 786433, 2, 0, 786434, 2, 1, 786435, 2, 0, 786436, 2, 0, 786437, 2, 1, 786438, 2, 0, 786439, 2, 1, 786440, 2, 0, 786441, 2, 0, 786442, 2, 1, 786443, 2, 0, 786444, 2, 1, 786445, 2, 0, 786446, 2, 0, 786447, 2, 1, 786448, 2, 0, 786449, 2, 1, 786450, 2, 0, 786451, 2, 0, 786452, 2, 1, 786453, 2, 0, 786454, 2, 1, 786455, 2, 0, 786456, 2, 0, 786457, 2, 1, 786458, 2, 0, 786459, 2, 1, 786460, 2, 0, 786461, 2, 0, 786462, 2, 1, 786463, 2, 0, 786464, 2, 1, 851969, 2, 131072, 851970, 2, 131073, 851971, 2, 131072, 851972, 2, 131072, 851973, 2, 131073, 851974, 2, 131072, 851975, 2, 131073, 851976, 2, 131072, 851977, 2, 131072, 851978, 2, 131073, 851979, 2, 131072, 851980, 2, 131073, 851981, 2, 131072, 851982, 2, 131072, 851983, 2, 131073, 851984, 2, 131072, 851985, 2, 131073, 851986, 2, 131072, 851987, 2, 131072, 851988, 2, 131073, 851989, 2, 131072, 851990, 2, 131073, 851991, 2, 131072, 851992, 2, 131072, 851993, 2, 131073, 851994, 2, 131072, 851995, 2, 131073, 851996, 2, 131072, 851997, 2, 131072, 851998, 2, 131073, 851999, 2, 131072, 852000, 2, 131073, 917505, 2, 196608, 917506, 2, 196609, 917507, 2, 196608, 917508, 2, 196609, 917509, 2, 196608, 917510, 2, 196609, 917511, 2, 196608, 917512, 2, 196609, 917513, 2, 196608, 917514, 2, 196609, 917515, 2, 196608, 917516, 2, 196609, 917517, 2, 196608, 917518, 2, 196609, 917519, 2, 196608, 917520, 2, 196609, 917521, 2, 196608, 917522, 2, 196609, 917523, 2, 196608, 917524, 2, 196609, 917525, 2, 196608, 917526, 2, 196609, 917527, 2, 196608, 917528, 2, 196609, 917529, 2, 196608, 917530, 2, 196609, 917531, 2, 196608, 917532, 2, 196609, 917533, 2, 196608, 917534, 2, 196609, 917535, 2, 196608, 917536, 2, 196609 )

[node name="Sharik" parent="." instance=ExtResource( 1 )]
position = Vector2( 191, 238 )
max_jumps = 2

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
centered_textures = true
collision_layer = 2
collision_mask = 0
format = 1
tile_data = PoolIntArray( -1441792, 0, 1, -1441791, 0, 1, -1441790, 0, 1, -1441789, 0, 1, -1441788, 0, 1, -1441787, 0, 1, -1441786, 0, 1, -1441785, 0, 1, -1441784, 0, 1, -1441783, 0, 1, -1441782, 0, 1, -1441781, 0, 1, -1441780, 0, 1, -1441779, 0, 1, -1441778, 0, 1, -1441777, 0, 1, -1441776, 0, 1, -1441775, 0, 1, -1441774, 0, 1, -1441773, 0, 1, -1441772, 0, 1, -1441771, 0, 1, -1441770, 0, 1, -1441769, 0, 1, -1441768, 0, 1, -1441767, 0, 1, -1441766, 0, 1, -1441765, 0, 1, -1441764, 0, 1, -1441763, 0, 1, -1441762, 0, 1, -1441761, 0, 1, -1441760, 0, 1, -1441759, 0, 1, -1441758, 0, 1, -1441757, 0, 1, -1441756, 0, 1, -1441721, 0, 1, -1441720, 0, 1, -1441719, 0, 1, -1441718, 0, 1, -1441717, 0, 1, -1441716, 0, 1, -1441715, 0, 1, -1441714, 0, 1, -1441713, 0, 1, -1441712, 0, 1, -1441711, 0, 1, -1441710, 0, 1, -1441709, 0, 1, -1441708, 0, 1, -1441707, 0, 1, -1441706, 0, 1, -1441705, 0, 1, 0, 0, 1, 1, 0, 1, 2, 0, 1, 3, 0, 1, 4, 0, 1, 16, 0, 1, 17, 0, 1, 18, 0, 1, 19, 0, 1, 35, 0, 1, 36, 0, 1, 37, 0, 1, 38, 0, 1, 39, 0, 1, 58, 0, 1, 59, 0, 1, 60, 0, 1, 61, 0, 1, 80, 0, 1, 81, 0, 1, 82, 0, 1, 83, 0, 1, 84, 0, 1, 85, 0, 1, 86, 0, 1, 87, 0, 1, 88, 0, 1, 89, 0, 1, 90, 0, 1, 91, 0, 1, 92, 0, 1, 93, 0, 1, 94, 0, 1, 95, 0, 1, 96, 0, 1, 97, 0, 1, 98, 0, 1, 99, 0, 1, 65536, 0, 65538, 131072, 0, 65538, 196608, 0, 65538, 262144, 0, 65538, 327680, 0, 65538, 393216, 0, 65538, 458752, 0, 65538, 524288, 0, 65538, 589824, 0, 65538, 655360, 0, 65538, 720896, 0, 65538, 786432, 0, 65538, 851968, 0, 65538, 917504, 0, 65538, 983040, 0, 1, 983041, 0, 1, 983042, 0, 1, 983043, 0, 1, 983044, 0, 1, 983045, 0, 1, 983046, 0, 1, 983047, 0, 1, 983048, 0, 1, 983049, 0, 1, 983050, 0, 1, 983051, 0, 1, 983052, 0, 1, 983053, 0, 1, 983054, 0, 1, 983055, 0, 1, 983056, 0, 1, 983057, 0, 1, 983058, 0, 1, 983059, 0, 1, 983060, 0, 1, 983061, 0, 2, 983073, 0, 0, 983074, 0, 1, 983075, 0, 1, 983076, 0, 1, 983077, 0, 1, 983078, 0, 1, 983079, 0, 1, 983080, 0, 1, 983081, 0, 1, 983082, 0, 1, 983083, 0, 1, 983084, 0, 1, 983085, 0, 1, 983086, 0, 1, 983087, 0, 2, 983107, 0, 0, 983108, 0, 1, 983109, 0, 1, 983110, 0, 1, 983111, 0, 1, 983112, 0, 1, 983113, 0, 2, 983134, 0, 0, 983135, 0, 1, 983136, 0, 1, 983137, 0, 1, 983138, 0, 1, 983139, 0, 1 )

[node name="ItemMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 8, 8 )
cell_quadrant_size = 64
centered_textures = true
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( -5439458, 0, 0, -5439449, 0, 0, -5439440, 0, 0, -5439431, 0, 0, -5439422, 0, 0, -5439413, 0, 0, -5439404, 0, 0, -5439395, 0, 0, -5439367, 0, 0, -5308263, 0, 0, -5308256, 0, 0, -5308248, 0, 0, -5308241, 0, 0, -5242759, 0, 0, -5046154, 0, 0, -5046151, 0, 0, -5046148, 0, 0, -4915122, 1, 0, -4915111, 1, 0, -4915100, 1, 0, -4849549, 0, 0, -4849546, 0, 0, -4849543, 0, 0, -4849540, 0, 0, -4849537, 0, 0, -4849475, 1, 0, -4587367, 1, 0, -4325374, 1, 0, -4325370, 1, 0, -4325366, 1, 0, -4325362, 1, 0, -4259730, 1, 0, -4259716, 1, 0, -4259703, 1, 0, -4194115, 1, 0, -4063079, 1, 0, -3538755, 1, 0, -3473382, 0, 0, -3473378, 0, 0, -3473374, 0, 0, -3473370, 0, 0, -3473366, 0, 0, -3473350, 0, 0, -3473346, 0, 0, -3473342, 0, 0, -3342308, 0, 0, -3342304, 0, 0, -3342300, 0, 0, -3342296, 0, 0, -3342276, 0, 0, -3342272, 0, 0, -3145726, 1, 0, -3145723, 1, 0, -3145720, 1, 0, -3145717, 1, 0, -2883395, 1, 0, -2621311, 1, 0, -2228171, 1, 0, -2228035, 1, 0, -2031487, 1, 0, -1966027, 1, 0, -1703883, 1, 0, -1572675, 1, 0, -1507321, 1, 0, -1507316, 1, 0, -1507311, 1, 0, -1507165, 0, 0, -1441739, 1, 0, -1245101, 1, 0, -1245024, 0, 0, -1245018, 0, 0, -1179595, 1, 0, -1114046, 1, 0, -1114040, 1, 0, -982883, 0, 0, -982877, 0, 0, -982871, 0, 0, -851829, 1, 0, -851788, 1, 0, -851783, 1, 0, 393269, 0, 0, 393272, 0, 0, 720937, 0, 0, 720942, 0, 0, 720948, 0, 0, 720953, 0, 0, 720959, 0, 0, 720964, 0, 0, 1114153, 1, 0, 1114158, 1, 0, 1114164, 0, 0, 1114169, 0, 0, 1114175, 1, 0, 1114180, 1, 0, 1114211, 0, 0, 1114219, 0, 0, 1114227, 0, 0, 1114235, 0, 0, 1114243, 0, 0, 1114275, 1, 0, 1114282, 1, 0, 1114288, 1, 0, 1114294, 1, 0, 1769519, 1, 0, 1769524, 1, 0, 1769529, 1, 0, 1769534, 1, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="FragileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
centered_textures = true
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( -2621440, 0, 1, -2621439, 0, 1, -2621438, 0, 1, -2621437, 0, 1, -2621436, 0, 1, -2621435, 0, 1, -2621434, 0, 1, -2621433, 0, 1, -2621432, 0, 1, -2621431, 0, 1, -2621430, 0, 1, -2621429, 0, 1, -1769435, 0, 1, -1769434, 0, 1, -1769433, 0, 1, -1769432, 0, 1, -1769431, 0, 1, -1769430, 0, 1, -1769429, 0, 1, -1769408, 0, 1, -1769407, 0, 1, -1769406, 0, 1, -1769405, 0, 1, -1769404, 0, 1, -1769403, 0, 1, -1769402, 0, 1, -983011, 0, 1, -983010, 0, 1, -983009, 0, 1, -983008, 0, 1, -983007, 0, 1, -983006, 0, 1, -983005, 0, 1, -983004, 0, 1, -983003, 0, 1, -983002, 0, 1, -983001, 0, 1, -983000, 0, 1, -982999, 0, 1, -982998, 0, 1, -982997, 0, 1, -327660, 0, 1, -327659, 0, 1, -327658, 0, 1, -327657, 0, 1, -327656, 0, 1, -327655, 0, 1, -327654, 0, 1, -327653, 0, 1, -327652, 0, 1, -327651, 0, 1, -327650, 0, 1, -327649, 0, 1, -327648, 0, 1, -327636, 0, 1, -327635, 0, 1, -327634, 0, 1, -327633, 0, 1, -327632, 0, 1, -327631, 0, 1, -327630, 0, 1, -327629, 0, 1, -327628, 0, 1, -327627, 0, 1, -327626, 0, 1, -327625, 0, 1, -327624, 0, 1, -327623, 0, 1, -327622, 0, 1, -327621, 0, 1, -327620, 0, 1, -327619, 0, 1, -327618, 0, 1, -327617, 0, 1, -327616, 0, 1, -327615, 0, 1, -327614, 0, 1, -327613, 0, 1, -327612, 0, 1, -327611, 0, 1, -327610, 0, 1, 5, 0, 1, 6, 0, 1, 7, 0, 1, 8, 0, 1, 9, 0, 1, 10, 0, 1, 11, 0, 1, 12, 0, 1, 13, 0, 1, 14, 0, 1, 15, 0, 1, 40, 0, 1, 41, 0, 1, 42, 0, 1, 43, 0, 1, 44, 0, 1, 45, 0, 1, 46, 0, 1, 47, 0, 1, 48, 0, 1, 49, 0, 1, 50, 0, 1, 51, 0, 1, 52, 0, 1, 53, 0, 1, 54, 0, 1, 55, 0, 1, 56, 0, 1, 57, 0, 1, 983062, 0, 1, 983063, 0, 1, 983064, 0, 1, 983065, 0, 1, 983069, 0, 1, 983070, 0, 1, 983071, 0, 1, 983072, 0, 1, 983088, 0, 1, 983089, 0, 1, 983090, 0, 1, 983091, 0, 1, 983092, 0, 1, 983093, 0, 1, 983094, 0, 1, 983095, 0, 1, 983096, 0, 1, 983097, 0, 1, 983098, 0, 1, 983099, 0, 1, 983100, 0, 1, 983101, 0, 1, 983102, 0, 1, 983103, 0, 1, 983104, 0, 1, 983105, 0, 1, 983106, 0, 1, 983114, 0, 1, 983115, 0, 1, 983116, 0, 1, 983117, 0, 1, 983118, 0, 1, 983119, 0, 1, 983120, 0, 1, 983121, 0, 1, 983122, 0, 1, 983123, 0, 1, 983124, 0, 1, 983125, 0, 1, 983126, 0, 1, 983127, 0, 1, 983128, 0, 1, 983129, 0, 1, 983130, 0, 1, 983131, 0, 1, 983132, 0, 1, 983133, 0, 1 )

[node name="Moving" type="Node2D" parent="."]

[node name="BrickPlatform" parent="Moving" instance=ExtResource( 8 )]
position = Vector2( 440, 248 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Moving/BrickPlatform"]
playback_process_mode = 0
anims/RESET = SubResource( 3 )
anims/move = SubResource( 2 )

[node name="BrickPlatform2" parent="Moving" instance=ExtResource( 8 )]
position = Vector2( 104, 184 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Moving/BrickPlatform2"]
anims/RESET = SubResource( 4 )
anims/move = SubResource( 5 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="HUD"]
margin_left = 10.0
margin_top = 10.0
margin_right = 107.0
margin_bottom = 65.0

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/MarginContainer"]
margin_right = 97.0
margin_bottom = 55.0

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/MarginContainer/VBoxContainer"]
margin_right = 97.0
margin_bottom = 20.0

[node name="TextureRect" type="TextureRect" parent="HUD/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
texture = ExtResource( 7 )
stretch_mode = 6

[node name="LabelCoins" type="Label" parent="HUD/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 24.0
margin_right = 24.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
align = 2
valign = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="HUD/MarginContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 97.0
margin_bottom = 44.0

[node name="TextureRect" type="TextureRect" parent="HUD/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
texture = ExtResource( 6 )
stretch_mode = 6

[node name="LabelOrbs" type="Label" parent="HUD/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 24.0
margin_right = 24.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
valign = 1
